@@ -83,7 +83,6 @@ final class SystemJvmOptions {
                  * while we explore alternatives. See org.elasticsearch.xpack.searchablesnapshots.preallocate.Preallocate.
                  */
                 "--add-opens=java.base/java.io=org.elasticsearch.preallocate",
-                "--add-opens=org.apache.lucene.core/org.apache.lucene.store=org.elasticsearch.vec",
                 maybeEnableNativeAccess(),
                 maybeOverrideDockerCgroup(distroType),
                 maybeSetActiveProcessorCount(nodeSettings),
@@ -144,7 +143,7 @@ final class SystemJvmOptions {
 
     private static String maybeEnableNativeAccess() {
         if (Runtime.version().feature() >= 21) {
-            return "--enable-native-access=org.elasticsearch.nativeaccess";
+            return "--enable-native-access=org.elasticsearch.nativeaccess,org.apache.lucene.core";
         }
         return "";
     }
